Mon Jun 20 11:36:21 2005  Steve Huston  <shuston@riverace.com>

	* ace/OS_NS_sys_socket.inl (closesocket): Removed the
	  ACE_OS::shutdown() call in an HP-UX block. Calling shutdown breaks
	  an often-used idiom in UNIX programming of forking a new process
	  to handle a connection and closing the handle in the parent. Doing
	  a shutdown() before close() initiates a TCP close even though there
	  are multiple handles to the same socket. Thanks to Doug Schmidt
	  and Howard Finer for the exchange that led to this change. This
	  reverts a change made earlier:
	  Thu Jan  1 17:56:31 2004  Steve Huston  <shuston@riverace.com>

Mon Jun 20 09:46:24 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Fixed a long standing bug where the libpath set in a Define_Custom
          was not utilized.

Mon Jun 20 15:35:42 2005  Boris Kolpackov  <boris@kolpackov.net>

        * protocols/ace/RMCast/Acknowledge.cpp:
        * protocols/ace/RMCast/Fragment.cpp:
        * protocols/ace/RMCast/Link.cpp:
        * protocols/ace/RMCast/Protocol.h:
        * protocols/ace/RMCast/Reassemble.cpp:

          Made code VC6-compatible.

Mon Jun 20 11:38:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/bidir_giop.mpb:
          Added pi as base project, this was implicitly in the past because
          portableserver was based on pi.

Mon Jun 20 10:46:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/portableserver.mpb:
          The portableserver library is not dependent on pi anymore.
          The new pi_server library is dependent.

        * bin/MakeProjectCreator/config/ftrtevent.mpb:
        * bin/MakeProjectCreator/config/ftrteventchannel.mpb:
        * bin/MakeProjectCreator/config/ifrservice.mpb:
          These projects use functionality of pi_server, so added that
          as base project
